loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:1: error: not found: value is
if (!is OverBaggle()) {
     ^